--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,19 @@ header{
 	cursor: pointer;
 	display: none;
 }
+
+
+/* s > second-color */
+.p-small-s-color{
+	color:var(--thired-color); 
+	font-size: 18px;
+}
+/* s > second-color */
+.p-small-B-color{
+	color:var(--bg-color); 
+	font-size: 18px;
+}
+
 /*******************************************/
 section{
 	padding: 80px 10%;
@@ -163,7 +176,19 @@ header.sticky{
 	text-align: center;
 	justify-content: space-around;
 	margin-top: 5rem;
+	border: medium dashed rgb(128, 0, 2);
 }
+
+.row-items-start{
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+	align-items: start;
+	text-align:start;
+	justify-content: start;
+
+	border: medium dashed rgb(128, 0, 2);
+}
+
 /*************************************************    contenu menu  ***********************/
 
 
@@ -473,7 +498,12 @@ header.sticky{
 	border: medium dashed rgb(37, 54, 167);
 	
 }
-
+.footer2item{
+	display: flex;
+	flex-wrap: wrap;
+	border: medium dashed rgb(37, 54, 167);
+	
+}
 .list{
 	width: 100%;
 	border: medium dashed rgb(221, 49, 207);
@@ -486,7 +516,7 @@ header.sticky{
 }
 
 .list ul li:not(last-child) {
-	margin-bottom: 16px;
+	margin-bottom: 8px;
 }
 .list ul li a{
 	color: #fffdfdbf;
@@ -501,14 +531,16 @@ header.sticky{
 	color: var(--bg-color);
 	transform: translateX(14px);
 }
+.social {
+	display: flex;
+	width: 50%;
+	border: medium dashed rgb(221, 49, 207);
+	justify-content: space-between;
+	align-items: center;
+}
 .social a{
 	height: 40px;
 	width: 40px;
-	display: inline-flex;
-	align-items: center;
-	justify-content: space-between;
-	align-items: space-around;
-	font-size: 21px;
 	border-radius: 15px;
 	transition: .3s;
 	
@@ -521,8 +553,9 @@ header.sticky{
 	padding-top: 90px;
 }
 .end-text p{
-	color: var(--bg-color);
-	font-size: 14px;
+	color: var(--fourthed-color) ;
+	font-size: 24px;
+	font-weight: 600;
 	letter-spacing: 2px;
 }
 
@@ -728,37 +761,6 @@ form {
 
 
 /************************************** article *****************************/
-
-
-/*.container-img img{
-	padding: 15px;
-	background: var(--bg-color);
-	box-shadow: 5px 10px 30px rgb(85 85 85 / 20%);
-	border-radius: 4px;
-	margin-bottom: 15px;
-	cursor: pointer;
-}*/
-
-.container-img-tip {
-    display: flex;
-    justify-content: center;
-    overflow: hidden; 
-}
-
-
-.container-img-tip img {
-    width: 100%;
-    height: auto; 
-    max-height: 300px; 
-    object-fit: cover; 
-    box-shadow: 5px 10px 30px rgba(85, 85, 85, 0.2);
-    border-radius: 4px;
-    margin-bottom: 15px;
-}
-
-
-
-
 .checklist li {
     color:var(--second-color); 
     margin-bottom: 10px;
