--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@
 	--main-color: #000000;
 	--big-font: 6rem;
 	--h2-font: 4rem;
-	--h2-font-family : 'Sansita Swashed', cursive; ;
+	--h2-font-family : 'Sansita Swashed', cursive; 
+	--font-family-second : 'Sansita Swashed', cursive; 
 	--h2-font-color :var(--text-color);
 	--p-font: 1.1rem;
 }
@@ -82,6 +83,9 @@ header{
 	color:var(--bg-color); 
 	font-size: 18px;
 }
+.text-basic{
+	font-size: 24px;
+}
 
 /*******************************************/
 section{
@@ -92,6 +96,18 @@ section{
 	position: relative;
 	width: 100%;
 	height: 100vh;
+	background: url(../img/background.png);
+	background-size: cover;
+	background-position: center;
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	align-items: center;
+	border: medium dashed rgb(63, 30, 172);
+}
+.home2{
+	position: relative;
+	width: 100%;
+	height: 25vh;
 	background: url(../img/background.png);
 	background-size: cover;
 	background-position: center;
@@ -166,7 +182,10 @@ header.sticky{
 	color: var(--text-color);
 } 
 
-
+.background-menu-small{
+	width: 100%;
+	background-size: cover;
+}
 
 .row-items{
 	display: grid;
@@ -186,7 +205,7 @@ header.sticky{
 	text-align:start;
 	justify-content: start;
 
-	border: medium dashed rgb(128, 0, 2);
+
 }
 
 /*************************************************    contenu menu  ***********************/
@@ -195,7 +214,6 @@ header.sticky{
 
 
 .container-box {
-    /*background: var(--bg-color);*/
 	height:410px ;
 	width: 360px;
     background: url(../img/bgproduct.png);
@@ -216,8 +234,6 @@ header.sticky{
 	margin-bottom: 15px;
 	cursor: pointer;
 }
-
-
 
 
 .flex-container {
@@ -284,22 +300,6 @@ header.sticky{
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .container-box p {
 	font-size: 15px;
 	color: var(--second-color);
@@ -310,7 +310,9 @@ header.sticky{
 	border: 1px solid transparent;
 	transform: translateY(-3px);
 }
-
+.center{
+	text-align: center;
+}
 .title{
 	text-align: center;
 	line-height: 1.2;
@@ -469,44 +471,44 @@ header.sticky{
 	cursor: pointer;
 }
 
-#contact{
-	background: var(--main-color);
+#sectionfooter{
+	background: url(../img/footer.png);
 }
 
 /*********************** footer *****************/
 .main{
 	display: flex;
 	flex-wrap: wrap;
-	border: medium dashed rgb(43, 128, 0);
+
 }
 
 .footer{
 	padding: 20px 0;
-	background: url(../img/footer.png);
-	border: medium dashed rgb(128, 0, 2);
+	
+	
 }
 .footer1{
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: start;
-	border: medium dashed rgb(144, 201, 37);
+
 }
 .footer1item{
 	display: flex;
 	width: 50%;
 	flex-wrap: wrap;
-	border: medium dashed rgb(37, 54, 167);
+
 	
 }
 .footer2item{
 	display: flex;
 	flex-wrap: wrap;
-	border: medium dashed rgb(37, 54, 167);
+
 	
 }
 .list{
 	width: 100%;
-	border: medium dashed rgb(221, 49, 207);
+
 }
 .list h4{
 	font-size: 21px;
@@ -534,7 +536,6 @@ header.sticky{
 .social {
 	display: flex;
 	width: 50%;
-	border: medium dashed rgb(221, 49, 207);
 	justify-content: space-between;
 	align-items: center;
 }
@@ -645,119 +646,52 @@ header.sticky{
 }
 /************************************************************   Modification ***********************************/
 
+
+
 /*  formulaire */ 
 .formContact {
     display: flex; 
     flex-direction: column; 
-    align-items: center; 
-    justify-content: center; 
+    align-items: stretch; 
+    justify-content: start; 
     height: 100vh; 
+	width: 880px;
+	border: medium dashed rgb(36, 128, 0);
+	margin :  0 auto ; 
+	
 }
 
-form {
-    display: flex;
-    flex-direction: column; 
-    align-items: center;
-}
-.formContact form input{
-	display: inline-block;
-	width: 100%;
-	padding: 20px 150px 20px 30px;
-	margin: 10px;
-	box-shadow: 5px 10px 30px rgb(85 85 85 / 20%);
-	outline: none;
-	border: none;
-	border-radius: 15px;
-}
-.formContact form textarea{
-	display: inline-block;
-	width: 100%;
-	padding: 20px 150px 20px 30px;
-	margin: 10px;
-	box-shadow: 5px 10px 30px rgb(85 85 85 / 20%);
-	outline: none;
-	border: none;
-	border-radius: 15px;
-}
-.formContact form input:last-child{
 
-	outline: none;
-	border: none;
-	padding: 14px 30px;
-	margin: 10px;
+.formContact  input , textarea{
+	display: inline-block;
+	width: 100%;
+	padding: 4px  4px ;
+	border: 1px solid #333;
 	border-radius: 15px;
-	background: var(--main-color);
+}
+
+
+
+.formContact  label{
+   font-family:var(--font-family-second);
+   font-size: 24px;
+   text-align: start;
+   margin-top: 50px;
+   margin-bottom:15px ;
+}
+
+
+.formContact  input:last-child{
+	height: 80px;
+	margin-top: 50px;
+	border-radius: 5px 0px 0px 5px;
+	background: var(--second-color);
 	color: var(--bg-color);
-	top: 6px;
-	right: 6px;
 	cursor: pointer;
+	font-size: "inter";
+	font-weight: 400;
 }
 
-
-/*****************    card  *********************/
-
-.container-card{
-	display: flex;
-	width: 1040px;
-	justify-content: space-evenly;
-	flex-wrap: wrap;
-  }
-  .card {
-	margin: 10px;
-	background-color: #fff;
-	border-radius: 10px;
-	box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
-	overflow: hidden;   /* le depass des bordure est cache  */
-  }
-  .card-header img {
-	width: 100%;
-	height: 200px;
-	object-fit: cover; /*l image rempli la zone -- couvrir */
-  }
-  .card-body {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: flex-start;
-	padding: 20px;
-	min-height: 250px;
-  }
-  .tag {
-	background: #cccccc;
-	border-radius: 50px;
-	font-size: 12px;
-	margin: 0;
-	color: #fff;
-	padding: 2px 10px;
-	text-transform: uppercase;
-	cursor: pointer;
-  }
-  .tag-teal {
-	background-color: #47bcd4;
-  }
-  .tag-purple {
-	background-color: #5e76bf;
-  }
-  .tag-pink {
-	background-color: #cd5b9f;
-  }
-  
-  .user {
-	display: flex;
-	margin-top: auto;
-  }
-  .user img {
-	border-radius: 50%;
-	width: 40px;
-	height: 40px;
-	margin-right: 10px;
-  }
-  .user-info h5 {
-	margin: 0;
-  }
-  .user-info small {
-	color: #545d7a;
-  }
 
 
 /************************************** article *****************************/
