--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,6 @@ header{
 	z-index: 1000;
 	display: flex;
 	align-items: center;
-   /* background-color: var(--main-color);*/
-	/*padding: 30px 18%;*/ /**change */
 	padding: 20px 10%;
 	transition: ease .40s;
     border: medium dashed rgb(128, 0, 34);
@@ -83,8 +81,24 @@ header{
 	color:var(--bg-color); 
 	font-size: 18px;
 }
-.text-basic{
+.text-basic-center{
+	font-family:var(--font-family-second);
 	font-size: 24px;
+	text-align: center;
+	margin-top: 10px;
+	margin-bottom:10px ;
+	padding: 5px;
+	line-height: 1.6;
+}
+.text-basic-justify{
+	font-family:var(--font-family-second);
+	font-size: 24px;
+	margin-top: 10px;
+	margin-bottom:10px ;
+	padding: 5px 5px;
+	line-height: 44px;
+    text-align: justify;
+	font-weight: normal;
 }
 
 /*******************************************/
@@ -187,16 +201,63 @@ header.sticky{
 	background-size: cover;
 }
 
+
+
+h1{
+	font-size: 74px;
+	line-height: 1.2;
+	font-family: 'Sansita Swashed', cursive;
+    font-weight: 400; /* Regular *//**/
+	letter-spacing: 4px;
+	margin-bottom: 100px;
+
+
+}
+
+
+h2 {
+	text-align: center;
+	line-height: 1.2;
+	font-size: var(--h2-font);
+	font-family: var(--h2-font-family);
+	color: var(--h2-font-color);
+}
+
+
+
+
+
 .row-items{
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(250px, auto));
-	grid-gap: 2rem;
+	grid-gap: 1.5rem;
 	align-items: center;
 	text-align: center;
-	justify-content: space-around;
+	justify-content: center;
 	margin-top: 5rem;
 	border: medium dashed rgb(128, 0, 2);
+	
 }
+
+.photo-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 3 colonnes fixes */
+    grid-gap: 10px; /* Espace entre les images */
+	
+	
+  
+}
+
+.photo-grid img {
+    width: 100; /* Les images prennent toute la largeur de leur cellule */
+    height: auto; /* Conserve les proportions des images */
+    object-fit: cover; /* Assure que l'image remplit bien sa cellule sans être déformée */
+	position: relative; /* Position relative pour permettre le déplacement avec margin */
+    margin-top: -10px;
+	border: medium dashed rgb(128, 0, 2);
+}
+
+
 
 .row-items-start{
 	display: grid;
@@ -209,6 +270,28 @@ header.sticky{
 }
 
 /*************************************************    contenu menu  ***********************/
+.container {
+	display: flex;
+	align-items: start;          /* Centre verticalement */
+	justify-content: space-between; /* Laisse de l'espace entre le texte et l'image */
+	padding: 20px;
+	gap: 20px;                    /* Espace entre le texte et l'image */
+	border: medium dashed rgb(30, 0, 128);
+ 
+}
+
+.container img {
+	width: 50%;                   /* L'image occupe 50% de la largeur */
+	height: 700px;                 /* L'image occupe 90% de la hauteur de l'écran */
+	object-fit: contain;             /* Assure que l'image remplit bien son espace sans être déformée */
+}
+.container .text {
+	width: 50%;                   /* Le texte occupe 50% de la largeur */
+	padding: 0 20px;
+	text-align: center;             /* Aligne le texte à gauche */
+}
+
+
 
 
 
@@ -226,17 +309,28 @@ header.sticky{
     cursor: pointer;
 }
 
-
 .container-img img{
-	height: 226px;
+	/*height: 226px;
 	width: 223px;
 	padding: 15px;
-	margin-bottom: 15px;
+	margin-bottom: 15px;*/
 	cursor: pointer;
 }
 
 
-.flex-container {
+
+.container-img-bkg{
+	display: block;
+	justify-content: center;
+	align-items: center ;
+	background: url(../img/board.png);
+	height: 530px;
+	width: 460px;
+	color : var(--bg-color)
+
+}
+
+.flex-container-row {
     display: flex;
     flex-wrap: wrap;
 	flex-direction: row;
@@ -292,7 +386,7 @@ header.sticky{
 .package-content{
 
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+	grid-template-columns: repeat(3, 1fr);
 	grid-gap: 2rem;
 	align-items: center;
 	margin-top: 5rem;
@@ -318,7 +412,6 @@ header.sticky{
 	line-height: 1.2;
 	font-size: var(--h2-font);
 	font-family: var(--h2-font-family);
-	line-height: 1.1;
 	color: var(--h2-font-color);
 }
 .title h2{
@@ -375,101 +468,16 @@ header.sticky{
 	align-items: center;
 	margin-top: 5rem;
 }
-.col-content, .blog-content{
-	position: relative;
-}
-.col-content img, .blog-content img{
-	width: 100%;
-	height: 500px;
-	object-fit: cover;
-	border-radius: 15px;
-	filter: brightness(80%);
-	transition: all .3s cubic-bezier(.495,.05,.55,.95);
-	will-change: filter;
-}
-.col-content h5{
-	position: absolute;
-	font-size: 22px;
-	font-weight: 500;
-	color: var(--bg-color);
-	left: 15px;
-	bottom: 60px;
-}
-.blog-content h5{
-	position: absolute;
-	font-size: 22px;
-	font-weight: 500;
-	color: var(--bg-color);
-	left: 15px;
-	bottom: 100px;
-}
 
-.col-content p, .blog-content p{
-	position: absolute;
-	font-size: 15px;
-	color: var(--bg-color);
-	left: 15px;
-	bottom: 30px;
-	letter-spacing: 2px;
-}
+
+
+
 .col-content img:hover{
 	filter: brightness(100%) hue-rotate(45deg);
 	transform: scale(1.04);
 	cursor: pointer;
 }
-.blog-content img:hover{
-	-webkit-filter: brightness(30%);
-    -webkit-transition: all 1s ease;
-    -moz-transition: all 1s ease;
-    -o-transition: all 1s ease;
-    -ms-transition: all 1s ease;
-    transition: all 1s ease;
-	cursor: pointer;
-}
-/********************************************************************/
-.newsletter{
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	justify-content: space-between;
-	grid-gap: 3rem;
-}
-.news-text h2{
-	font-size: var(--h2-font);
-	margin-bottom: 5px;
-}
-.news-text p{
-	font-size: var(--p-font);
-	color: var(--second-color);
-	line-height: 30px;
-}
-.newsletter form{
-	max-width: 100%;
-	width: 450px;
-	position: relative;
-}
-.newsletter form input:first-child{
-	display: inline-block;
-	width: 100%;
-	padding: 20px 150px 20px 30px;
-	box-shadow: 5px 10px 30px rgb(85 85 85 / 20%);
-	outline: none;
-	border: none;
-	border-radius: 15px;
-}
-.newsletter form input:last-child{
-	display: inline-block;
-	position: absolute;
-	outline: none;
-	border: none;
-	padding: 14px 30px;
-	border-radius: 15px;
-	background: var(--main-color);
-	color: var(--bg-color);
-	top: 6px;
-	right: 6px;
-	cursor: pointer;
-}
+
 
 #sectionfooter{
 	background: url(../img/footer.png);
@@ -654,7 +662,6 @@ header.sticky{
     flex-direction: column; 
     align-items: stretch; 
     justify-content: start; 
-    height: 100vh; 
 	width: 880px;
 	border: medium dashed rgb(36, 128, 0);
 	margin :  0 auto ; 
@@ -662,14 +669,20 @@ header.sticky{
 }
 
 
-.formContact  input , textarea{
+.formContact  input {
+	display: inline-block;
+	width: 100%;
+	height: 55px;
+	border: 1px solid #333;
+	border-radius: 8px;
+}
+.formContact   textarea{
 	display: inline-block;
 	width: 100%;
 	padding: 4px  4px ;
 	border: 1px solid #333;
-	border-radius: 15px;
+	border-radius: 8px;
 }
-
 
 
 .formContact  label{
@@ -677,7 +690,8 @@ header.sticky{
    font-size: 24px;
    text-align: start;
    margin-top: 50px;
-   margin-bottom:15px ;
+   margin-bottom:10px ;
+   padding: 5px;
 }
 
 
@@ -714,17 +728,42 @@ header.sticky{
     margin-top: 40px; 
 }
 
-
-.star-rating {
-    /*display: inline-block;*/
-    margin-top: 10px;
+.promo {
+    width: 100%; /* Prend toute la largeur de la page */
+    height: 440px; /* Hauteur fixe */
+    background: url(../img/promo.png) no-repeat center center; /* Image centrée, sans répétition */
+    background-size: cover; /* L'image couvre toute la div, sans déformation */
+    border: #000000;
+    border-style: dashed;
+	text-align: center;
+	margin: 0 auto;
 }
-
-.star {
-    font-size: 30px;
-    color: lightgray; 
+.promo h4{
+	font-family:var(--font-family-second);
+	font-size: 48px;
+	text-align: center;
+	margin-top: 10px;
+	margin-bottom:10px ;
+	padding: 5px;
+	line-height: 1.6;
+	color:var(--second-color)
 }
-
-.star.filled {
-    color: gold; 
+.promo p{
+	font-family:"inter" ; 
+	font-size: 24px;
+	text-align: center;
+	margin-top: 10px;
+	margin-bottom:10px ;
+	padding: 5px;
+	line-height: 1.6;
+	color:var(--fourthed-color)
+}
+.promo a{
+	margin-top: 30px;
+	border-radius: 5px 0px 0px 5px;
+	background: var(--second-color);
+	color: var(--bg-color);
+	cursor: pointer;
+	font-size: "inter";
+	font-weight: 400;
 }
